# bootcamp-python

./: bootcamp-python.ipynb  pyproject.toml  workshop-python.ipynb
data/: df_to_parquet.parquet  lidando-com-arquivos.txt
