[tool.poetry]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Dan <daniel.leonssio@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.1"
pandas = "^2.2.2"
pandera = "^0.20.3"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
